# gateflow-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GUIDE.md  LICENSE  README.md  db.sqlite3  docker-compose.yml  mypy.ini  pyproject.toml
apps/access/: README.md  admin.py  apps.py  filters.py  models.py  pdf.py  serializers.py  tests.py  urls.py  views.py
apps/access/migrations/: 0001_initial.py  0002_add_accesslog_indexes.py
apps/destinations/: README.md  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/destinations/migrations/: 0001_initial.py  0002_destination.py  0002_initial.py
apps/destinations/tests/: test_destination_model.py  test_destinations_api.py
apps/metrics/: serializers.py  urls.py  views.py
apps/passes/: 0002_accesspass.py  README.md  admin.py  apps.py  filters.py  models.py  pdf.py  serializers.py  tests.py  urls.py  views.py
apps/passes/migrations/: 0001_initial.py  0002_accesspass_is_used_accesspass_qr_code_and_more.py  0002_add_is_used_to_access_pass.py
apps/users/: README.md  admin.py  models.py  permissions.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_destinations.py
config/: settings.py  urls.py
docs/: api.md  architecture.md  db_schema.md  gateflow.postman_environment.json  openapi.json  users.postman_collection.json
docs/API TEST/: GateFlow.postman_collection.json  GateFlow.postman_environment.json
examples-dev/: .env.dev.example  .env.example  .env.prod.example  .env.vercel.example  users.postman_collection.json
(+3 files in other folders)
